# cyrinx

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/cyrinx/: OptionParser.h
include/cyrinx/Alphabet/: EnglishAlphabet.h  SimpleAlphabet.h
include/cyrinx/Searcher/: BitapSearcher.h  DamerauLevensteinMetric.h  Dictionary.h  Metric.h  MetricSearcher.h  SearchResult.h  Searcher.h
include/cyrinx/Text/: IdentifierFilter.h  Splitter.h  Support.h
include/cyrinx/Typo/: TypoAction.h  TypoConsumer.h  TypoContext.h  TypoVisitor.h
lib/: CMakeLists.txt  OptionParser.cpp  cyrinx.cpp
lib/Alphabet/: Alphabet.h  EnglishAlphabet.h  SimpleAlphabet.h
lib/Searcher/: BitapSearcher.cpp  BitapSearcher.h  CMakeLists.txt  DamerauLevensteinMetric.cpp  Dictionary.cpp  Dictionary.h  MetricSearcher.cpp  SearchResult.cpp  Searcher.h
lib/Searcher/Alphabet/: Alphabet.h  EnglishAlphabet.h  SimpleAlphabet.h
lib/Text/: CMakeLists.txt  IdentifierFilter.cpp  Splitter.cpp  Support.cpp
lib/Typo/: CMakeLists.txt  TextProcessor.h  TypoAction.cpp  TypoAction.h  TypoConsumer.h  TypoContext.cpp  TypoContext.h  TypoVisitor.cpp  TypoVisitor.h
src/: lexer.cpp  lexer.h  parser.cpp  parser.h  symbol_table.cpp  symbol_table.h
